# Find-A-Name

./: .gitignore  .pre-commit-config.yaml  README.md  index.py  main.py  pyproject.toml  requirements.txt
app/: errors.py  main.py  models.py  operations.py
app/html/: 404.html  content.html
app/modules/: gitRepos.py  langRepos.py  osrepos.py
app/src/: errors.py  models.py  operations.py
app/src/modules/: __init__.py  gitRepos.py  langRepos.py  osRepos.py
app/static/: index.css  index.js
app/static/html/: 404.html  index.html
app/templates/: 404.html  500.html  content.html  errors.html  footer.html  header.html  index.html
html/: content.html
modules/: gitRepos.py  gitrepos.py  langRepos.py  osrepos.py
